--- a/week2/css/stylesheet.css
+++ b/week2/css/stylesheet.css
@@ -22,6 +22,19 @@ div{
   position: relative;  
 }
 
+.titleregion {
+  position: absolute;
+  height: 30px;
+  width: 60px;
+  top: -5px;
+  right:45px;
+  padding:8px 10px 5px 5px;
+  text-align: center;
+  color: white;
+  font-weight: bold;
+  box-shadow: none;
+}
+
 p {
   padding: 25px 10px 10px 10px;
   border: 1px solid black;
@@ -35,19 +48,6 @@ p {
 }
 
 /* Simple Responsive Framework. */
-
-p#titleregion {
-  position: absolute;
-  height: 30px;
-  width: 60px;
-  top: -5px;
-  right:45px;
-  padding:8px 10px 5px 5px;
-  text-align: center;
-  color: white;
-  font-weight: bold;
-  box-shadow: none;
-}
 
 div:nth-child(1) p:nth-child(1) {
   background-color: #B22222;
